--- a/SadAgregator/View/cells/CategoriesCell/CategoryCell/CategoryCollectionViewCell.xib
+++ b/SadAgregator/View/cells/CategoriesCell/CategoryCell/CategoryCollectionViewCell.xib
@@ -6,7 +6,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -23,30 +22,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="183" height="77"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y9p-Tr-nhn">
-                                <rect key="frame" x="8" y="16" width="167" height="17"/>
+                                <rect key="frame" x="8" y="16" width="167" height="45"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <color key="textColor" name="blackwhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JaO-Rb-xx9">
-                                <rect key="frame" x="8" y="41" width="167" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="YS6-qY-Xo3"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" name="gray"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="JaO-Rb-xx9" secondAttribute="bottom" constant="16" id="0xP-CA-QuS"/>
                             <constraint firstAttribute="trailingMargin" secondItem="y9p-Tr-nhn" secondAttribute="trailing" id="G1A-Xn-Knw"/>
+                            <constraint firstAttribute="bottom" secondItem="y9p-Tr-nhn" secondAttribute="bottom" constant="16" id="KuG-AY-gyK"/>
                             <constraint firstItem="y9p-Tr-nhn" firstAttribute="top" secondItem="yqU-E2-sRW" secondAttribute="top" constant="16" id="NTg-Cz-oFh"/>
-                            <constraint firstItem="JaO-Rb-xx9" firstAttribute="top" secondItem="y9p-Tr-nhn" secondAttribute="bottom" constant="8" id="REw-Dl-IH7"/>
-                            <constraint firstItem="JaO-Rb-xx9" firstAttribute="leading" secondItem="yqU-E2-sRW" secondAttribute="leadingMargin" id="YLV-5S-loE"/>
                             <constraint firstItem="y9p-Tr-nhn" firstAttribute="leading" secondItem="yqU-E2-sRW" secondAttribute="leadingMargin" id="oiY-fa-ahw"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="JaO-Rb-xx9" secondAttribute="trailing" id="seg-vE-sxZ"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -61,7 +48,6 @@
             <size key="customSize" width="183" height="77"/>
             <connections>
                 <outlet property="firstLabel" destination="y9p-Tr-nhn" id="Jfw-if-EtH"/>
-                <outlet property="secondLabel" destination="JaO-Rb-xx9" id="j2i-jF-her"/>
                 <outlet property="view" destination="yqU-E2-sRW" id="FXF-Da-6pH"/>
             </connections>
             <point key="canvasLocation" x="234.05797101449278" y="140.29017857142856"/>
@@ -74,8 +60,5 @@
         <namedColor name="gray">
             <color red="0.96100002527236938" green="0.9649999737739563" blue="0.97299998998641968" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
-        <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
